# chat_copaDoMundo

./: .env.example  .gitignore  README.md  chat-mobile.html  pyproject.toml  test_langfuse.py
api/: app.py  routes.py  schemas.py  session_manager.py
app/: __init__.py  main.py
app/agents/: router_agent.py
app/config/: __init__.py  aws_config.py  settings.py
app/data/raw/: artilheiros.txt  campeoes.txt  copas_por_edicao.txt  curiosidades.txt
app/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
app/guardrails/: response_validator.py
app/observability/: __init__.py  langfuse_client.py  logger.py
app/scripts/: ingest_documents.py
app/tools/: http_client.py  vector_store.py  web_search_tool.py
docs/: architecture.md
tests/: test_phase2.py
