[tool.poetry]
name = "world-cup-agent"
version = "0.1.0"
description = "Chatbot sobre Copa do Mundo com LangGraph e Amazon Bedrock"
authors = ["Seu Nome <seu@email.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"

# ── LLM e Agentes ────────────────────────────────────────────────────────────
langchain = "^0.3"
langchain-aws = "^0.2"
langchain-community = "^0.3"
langgraph = "^0.2"

# ── RAG e Vector Store ────────────────────────────────────────────────────────
chromadb = "^0.5"
langchain-chroma = "^0.1"

# ── API ───────────────────────────────────────────────────────────────────────
fastapi = "^0.115"
uvicorn = { version = "^0.30", extras = ["standard"] }

# ── Configuração e Validação ──────────────────────────────────────────────────
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"

# ── AWS ───────────────────────────────────────────────────────────────────────
boto3 = "^1.35"

# ── Observabilidade ───────────────────────────────────────────────────────────
langfuse = "^2.0"
structlog = "^24.0"

# ── HTTP Client ───────────────────────────────────────────────────────────────
httpx = ">=0.28"
tokenizers = {version = "^0.23.1", extras = ["all"]}
openai = "^2.41.1"
google-generativeai = "^0.8.6"
google-genai = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
